Fix: /checkout endpoint accidentally used on return method which caused merging of methods into one endpoint on documentation- altered and fixed now.
